force-app/force-app/main/default/objects/Form__c/Form__c.object-meta.xml
<CustomObject>
    <description>Create sets of custom questions.</description>
    <label>BT Form</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>