force-app/force-app/main/default/objects/Form__c/fields/Submitted_Message__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Message__c</fullName>
    <description>Include a personal message. There will already be a title above this message that says, &quot;Welcome [Attendee&apos;s First Name],&quot;</description>
    <inlineHelpText>Include a personal message. There will already be a title above this message that says, &quot;Welcome [Attendee&apos;s First Name],&quot;</inlineHelpText>
    <label>Submitted Message</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>